--- a/rasa/config.yml
+++ b/rasa/config.yml
@@ -15,6 +15,9 @@ pipeline:
     - name: EntitySynonymMapper
     - name: ResponseSelector
       epochs: 50
+    - name: FallbackClassifier
+      threshold: 0.6
+      ambiguity_threshold: 0.1
 
 policies:
     - name: MemoizationPolicy
@@ -22,7 +25,5 @@ policies:
       max_history: 12
       epochs: 50
     - name: MappingPolicy
-    - name: FallbackPolicy
-      nlu_threshold: 0.6
-      core_threshold: 0.1
-      fallback_action_name: action_unknown
+    - name: RulePolicy
+      core_fallback_threshold: 0.6
